--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         <section id="portfolio">
             <div class="container portfolio">
                 <div class="portfolio-header">
-                    <img src="./assets/portfolio-como-fazer1.jpg" alt="">
+                    <h1 style="font-size: 50px; margin-bottom: 20px; text-align: center;">PORTFOLIO</h1>
+                    <p>Confira alguns dos projetos que já trabalhei.</p>
                 </div>
                 <span id="slider"></span>
                 <div class="slider">
