--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section id="portfolio">
             <div class="container portfolio">
                 <div class="portfolio-header">
-                    <h1 style="font-size: 50px; margin-bottom: 20px; text-align: center;">PORTFOLIO</h1>
+                    <h1 style="font-size: 50px; margin-bottom: 20px; margin-top: 50px; text-align: center;">PORTFOLIO</h1>
                     <p>Confira alguns dos projetos que já trabalhei.</p>
                 </div>
                 <span id="slider"></span>
